	* Update install script after testing on additional platforms.
	* Provide default policies for more operating systems, and update some existing policies
	* Usability tweaks to twtest.
	* Fix email reporting on Syllable
	* Update copyright dates to 2018
	* Clean up code style with clang-format, & add a custom style that approximates existing OST usage.

2017-10-01 Brian Cox <bcox@tripwire.com>
	* Update version to 2.4.3.6
	* Fix & expand tests in Perl acceptance test framework
	* Fix & expand twtest unit tests, & rework unit test mini-framework so they’re referenced by name, not some numeric ID, and list tests as “skipped" if they don’t make any test assertions.
	* Add configure options to enable coverage, profiling, & use /dev/urandom as RNG (all off by default)
	* Add a ‘list’ make target to list all make targets
	* Remove dead code & add test coverage per gcov+lcov results
	* Fix various memory issues pointed out by valgrind
	* In examine-encryption mode, better reporting (& nonzero exit) if we can't find a keyfile for the examined file.
	* More exception handling around individual objects & init/IC as a whole, since there have been occasional reports of uncaught exceptions during init or check, and so far haven’t been able to repro or figure out what circumstances it occurs under. (e.g. Github issue #25)
	* Tweak install.sh so it can be run directly, not just thru 'make install' if you want. (Github issue #26)
	* Improve native (non-Posixy) path handling on platforms that need it (DOS, AROS, RISC OS, Redox)
	* New platforms:  MirOS BSD, Bitrig, LibertyBSD, RISC OS, Redox
	* Add default policies for HP-UX & various BSDs

2017-03-30 Brian Cox <bcox@tripwire.com>
	* Bump version to 2.4.3.5
	* Fix ‘install-strip’, ‘check’, ‘uninstall’, and ‘distcheck’ make targets.
	* Fix GCC 7.0.x warnings; use std::unique_ptr instead of deprecated std::auto_ptr where available.