@@ -8,6 +8,8 @@
 	* Fix email reporting on Syllable
 	* Update copyright dates to 2018
 	* Clean up code style with clang-format, & add a custom style that approximates existing OST usage.
+	* Add -t / --output-level option to print-db mode, for consistency w/ print-report mode.
+	* Add object list support to print-report mode, for consistency w/ print-db mode.
 
 2017-10-01 Brian Cox <bcox@tripwire.com>
 	* Update version to 2.4.3.6
